<resources>
    <string name="lbl_me">自分</string>
    <string name="lbl_id_register">ID再設定</string>
    <string name="lbl_mic">マイク</string>
    <string name="lbl_camera">カメラ</string>
    <string name="lbl_mic_on">マイクオン</string>
    <string name="lbl_mic_off">マイクオフ</string>
    <string name="lbl_camera_on">カメラオン</string>
    <string name="lbl_camera_off">カメラオフ</string>
    <string name="lbl_end_call">終了</string>
    <string name="lbl_switch_camera">画面切替</string>
    <string name="lbl_choose_virtual_background">背景を選択</string>
    <string name="lbl_calling">Calling…</string>
    <string name="msg_call_end">通話終了</string>
    <string name="msg_missed_call">%sからの不在着信があります</string>
    <string name="msg_call_rejected">応答なし</string>
    <string name="msg_incoming_call_busy">相手は別の電話に出ています</string>
    <string name="msg_something_wrong">何かが間違っていました。もう一度やり直してください</string>
    <string name="msg_invalid_id">このIDは登録できません。\nもう一度やり直すか新しいIDでお試しください。</string>
    <string name="msg_empty_number">IDを入力してください</string>
    <string name="msg_call_failure">電話の発信に失敗しました。\nIDまたはネットワークを確認してください。</string>
    <string name="msg_camera_permission">HotlineTVにカメラとマイクへのアクセスを許可すると、ビデオ通話を発信できるようになります</string>
    <string name="msg_access_camera">カメラとマイクへのアクセスを許可してください\n[設定]>[アプリ]変更できます。</string>
    <string name="msg_check_network">インターネットに接続されていません</string>
    <string name="lbl_input_your_id">あなたのIDを設定してください。</string>
    <!--    <string name="lbl_input_id">相手のIDを入力ください</string>-->
    <!--    <string name="lbl_input_group_id">ルームIDを入力ください</string>-->
    <string name="msg_member_left">%sがルームを退出しました</string>
    <string name="msg_member_join">%sがルームに入ってます</string>
    <string name="lbl_join">ルームに入る</string>
    <string name="lbl_exit_room">退出</string>
    <string name="lbl_menu_chat">チャット</string>
    <string name="lbl_group_id">ルームID: %s</string>
    <string name="label_1vs1">1対1</string>
    <string name="label_group">ルーム</string>
    <string name="incoming_dialog_incoming">着信ビデオ通話</string>
    <string name="permission_dialog_title">許可</string>
    <string name="permission_overlay_message">アプリを使用していないときでも着信を表示するにはアクセスが必要です。%sを探して、許可してください。</string>
    <string name="permission_install_message">更新版をインストールするにはアクセスが必要です。%sを探して、許可してください。</string>
    <string name="notification_title">あなたのID : %s</string>
    <string name="notification_description">%sサービスが実行中</string>
    <string name="lbl_conversation">会話一覧</string>
    <string name="btn_show_conversation">会話一覧を表示する</string>
    <string name="lbl_no_conversation">会話なし</string>
    <string name="msg_camera_not_available">カメラにアクセスできません。 カメラ機器を再接続するか、デバイスを再起動してみてください</string>
    <string name="btn_accept">応答</string>
    <string name="btn_decline">拒否</string>
    <string name="lbl_base_setting">基本設定</string>
    <string name="lbl_sound_setting">着信音量</string>
    <string name="lbl_no_sound">無音</string>
    <string name="lbl_big_sound">大</string>
    <string name="btn_save">保存</string>
    <string name="lbl_setting">設定</string>
    <string name="lbl_term_of_service">利用規約</string>
    <string name="lbl_subsidy">令和元年度補正・令和二年度補正\nものづくり・商業・サービス生産性向上促進補助金採択事業 (R137080035)</string>
    <string name="lbl_copyright">Copyright © 2022 HotLine TV. All Rights Reserved.</string>
    <string name="lbl_version">Version %s</string>
    <string name="lbl_about_app">このアプリについて</string>
    <string name="btn_restart">再起動</string>
    <string name="lbl_history">履歴</string>
    <string name="lbl_recent_info">情報</string>
    <string name="lbl_recent_name">表示名</string>
    <string name="btn_update">アップデート</string>
    <string name="btn_delete">削除</string>
    <string name="lbl_auto_accept_setting">自動着信</string>
    <string name="msg_auto_answering">%d秒後に通話を開始します。</string>
    <string name="lbl_on">オン</string>
    <string name="lbl_off">オフ</string>
    <string name="msg_volume_0_error">声量は０に設定できません</string>
    <string name="lbl_volume">声量</string>
    <string name="lbl_blur_on">ぼかしオン</string>
    <string name="lbl_blur_off">背景ぼかし</string>
    <string name="lbl_virtual_bg">仮想背景</string>
    <string name="lbl_background">背景</string>
    <string name="bg_name_office">オフィス</string>
    <string name="bg_name_bookshelf">本棚</string>
    <string name="lbl_volume_setting">声量</string>
    <string name="btn_close">閉じる</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">キャンセル</string>
    <string name="btn_delete_all">すべて削除</string>
    <string name="msg_delete_all_recent">すべての履歴を消去しますか?</string>
    <string name="msg_delete_all_short">すべての短縮ダイヤルを消去しますか?</string>
    <string name="lbl_room_type">ルームタイプ</string>
    <string name="lbl_room_mesh">mesh</string>
    <string name="lbl_room_sfu">sfu</string>
    <string name="storage_access_required">ファイルをダウンロードするにはストレージ アクセスが必要です。</string>
    <string name="storage_permission_denied">ストレージへのアクセスが拒否されました。</string>
    <string name="dialog_download_title">アプリケーションの更新(5分以上かかります)</string>
    <string name="dialog_download_message">アップデートをダウンロードしています....</string>
    <string name="dialog_update_failure">アップデート版はありません。 もう一度やり直してください。</string>
    <string name="btn_install_updates">アップデート</string>
    <string name="lbl_volume_max">max volume</string>
    <string name="lbl_setting_overlay">TV画面への着信表示</string>
    <string name="lbl_setting_overlay_sub">（こちらをオンにすると、TV画面や他アプリの利用時にも着信表示され、直接会話が可能になります。）</string>
    <string name="lbl_overlay_setting">着信設定</string>
    <string name="lbl_size">着信表示サイズ</string>
    <string name="lbl_small">小</string>
    <string name="lbl_medium">中</string>
    <string name="lbl_large">大</string>
    <string name="msg_restart_confirmation">アプリ閉じて再起動します</string>
    <string name="msg_update_confirmation">最新版にアップデートします</string>
    <string name="msg_call_by_id">「%s」の番号にかけますか？</string>
    <string name="msg_join_room">ルームIDの「%s」に入りますか?</string>
    <string name="msg_call_by_short">短縮ダイヤル番号「%s」の「%s」さんにかけますか？</string>
    <string name="msg_exit_confirmation">アプリを終了しますか？</string>
    <string name="lbl_camera_state_setting">カメラの状態</string>
    <string name="lbl_camera_from_last">前回の状態</string>
    <string name="lbl_camera_always_on">常にON</string>
    <string name="lbl_camera_always_off">常にOFF</string>
    <string name="msg_short_exits">このショートダイヤルは既に登録されています</string>
    <string name="msg_short_invalid">このショートダイヤルは使用できません。</string>
    <string name="lbl_short">短縮</string>
    <string name="lbl_short_list">短縮ダイヤルリスト</string>
    <string name="button_short_register">新規登録</string>

    <string name="sc_call">Call</string>
    <string name="lbl_language_setting">言語設定</string>
    <string name="lbl_en">英語</string>
    <string name="lbl_ja">日本語</string>
    <string name="lbl_keypad">キーパッド</string>
    <string name="lbl_new_short">新規登録</string>
    <string name="txt_back">戻る</string>
    <string name="txt_edit">編集</string>
    <string name="txt_delete">削除</string>
    <string name="no_recents">履歴なし</string>
    <string name="lbl_theme_setting">外観モード</string>
    <string name="txt_them_auto">自動</string>
    <string name="txt_them_dark">ダーク</string>
    <string name="txt_them_light">ライト</string>
    <string name="lbl_setting_delete_data">全消去</string>
    <string name="txt_delete_recents">履歴消去</string>
    <string name="txt_delete_short">短縮消去</string>
    <string name="msg_clear_data_success">データが削除されました。</string>
    <string name="lbl_option_setting">オプション設定</string>
    <string name="txt_run_restart">再起動を実行</string>
    <string name="txt_run_update">アップデート実行</string>
    <string name="txt_register">登録する</string>
    <string name="msg_data_delete_confirm">データを削除して良いですか？</string>
    <string name="msg_short_delete_confirm">この新規を削除して良いですか？</string>
    <string name="lbl_auth_code_input">認証コードを入力してください</string>
    <string name="lbl_sub_auth_code_input">10桁のチケット番号を入力してください</string>
    <string name="msg_code_invalid">入力された認証コードは有効ではありません。もう一度試してください。</string>
    <string name="msg_code_expired">認証コードの有効期限が切れています。もう一度試してください。</string>
    <string name="msg_code_in_use">コードが使用されています。別のコードでもう一度お試しください。</string>
    <string name="txt_check">認証する</string>
    <string name="txt_set_avatar">アイコンを設定する</string>
    <string name="msg_set_avatar_success">アイコンが更新されました</string>
    <string name="lbl_select_avatar_size">切り取り範囲のサイズを選択してください。</string>
    <string name="lbl_speaker">スピーカー</string>
    <string name="lbl_video_resolution">映像解像度</string>
    <string name="lbl_video_vga">VGA (640x480)</string>
    <string name="lbl_video_hd">HD (1280x720)</string>
    <string name="lbl_video_fhd">Full HD (1920x1080)</string>
    <string name="lbl_audio_device">オーディオ機器</string>
    <string name="lbl_default_audio_device">デフォルトのスピーカー</string>
    <string name="lbl_video_codec">映像コーデック</string>
    <string name="lbl_load_reduction">負荷改善（低スペックの端末用）</string>
    <string name="lbl_video_mirror">送信する映像の反転</string>
    <string name="btn_open_app">アプリを開く</string>
    <string name="accessibility_description">HOTLINE TV+ リモコンサービス</string>
    <string name="msg_dont_show_this_again">次回から表示しない</string>
    <string name="msg_accessibility_required">リモコン操作で%sを起動するには、ユーザー補助機能を有効にしてください。</string>
    <string name="lbl_camera_api_source">カメラのAPIソース</string>
    <string name="lbl_camera_api_source_android">Androidソース</string>
    <string name="lbl_camera_api_source_usb">USBソース</string>
</resources>
