<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_box_normal"
        android:backgroundTint="?attr/box_background_color">
        <ImageView
            android:id="@+id/imv_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/text_color_light"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="@dimen/padding_small"
            app:layout_constraintStart_toStartOf="@id/imv_preview"
            app:layout_constraintEnd_toEndOf="@id/imv_preview"
            app:layout_constraintTop_toBottomOf="@id/imv_preview"
            app:layout_constraintBottom_toTopOf="@id/rdg_size"
            android:text="@string/lbl_select_avatar_size"/>

        <RadioGroup
            android:id="@+id/rdg_size"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_constraintStart_toStartOf="@id/imv_preview"
            app:layout_constraintEnd_toEndOf="@id/imv_preview"
            app:layout_constraintBottom_toTopOf="@id/btn_set"
            android:layout_marginBottom="@dimen/padding_small"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rd_large"
                android:text="@string/lbl_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rd_medium"
                android:text="@string/lbl_medium"
                android:layout_marginHorizontal="@dimen/padding_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rd_small"
                android:text="@string/lbl_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/txt_back"
            style="@style/secondary_button"
            android:layout_marginEnd="@dimen/padding_small"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_button"
            android:layout_marginBottom="@dimen/padding_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_set_avatar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>