<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_menu_end_call"
        android:layout_width="@dimen/view_menu_item_height"
        android:layout_height="48dp"
        android:background="@drawable/button_end_call"
        android:text="@string/lbl_end_call"
        style="@style/secondary_button"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/padding_small"
        app:layout_constraintTop_toTopOf="@id/btn_menu"
        app:layout_constraintBottom_toBottomOf="@id/btn_menu"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:layout_marginEnd="@dimen/padding_small"
        android:background="@drawable/bg_button_menu"
        android:src="@drawable/ic_menu_hamburger"
        android:layout_marginBottom="@dimen/padding_small"
        app:layout_constraintEnd_toStartOf="@id/btn_menu_end_call"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/container"
        android:layout_width="180dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/space_top"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        android:background="@drawable/bg_box_normal_white"
        android:backgroundTint="@color/bg_overlay_black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_total_count"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="13sp"
        android:gravity="center"
        android:translationX="-22dp"
        android:translationY="7dp"
        app:layout_constraintStart_toEndOf="@id/btn_menu"
        app:layout_constraintBaseline_toTopOf="@id/btn_menu"
        android:background="@drawable/circle_text_background"
        android:backgroundTint="@android:color/holo_red_light" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_chat_count"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/label_chat"
        app:layout_constraintTop_toTopOf="@id/label_chat"
        app:layout_constraintBottom_toBottomOf="@id/label_chat"
        android:background="@drawable/circle_text_background"
        android:backgroundTint="@android:color/holo_red_light" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        style="@style/text_menu_item"
        android:text="@string/lbl_menu_chat"
        android:visibility="invisible"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_mic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_mic"
        style="@style/text_menu_item"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintBottom_toTopOf="@id/label_chat"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_camera"
        style="@style/text_menu_item"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintBottom_toTopOf="@id/label_mic"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_menu_item"
        app:drawableTint="@color/white"
        android:text="@string/lbl_background"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintBottom_toTopOf="@id/label_video"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_choose_virtual_background"
        style="@style/text_menu_item"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintBottom_toTopOf="@id/label_volume" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_volume"
        android:textColor="@color/white"
        style="@style/text_menu_item"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintBottom_toTopOf="@id/label_background"/>
    
    <androidx.legacy.widget.Space
        android:id="@+id/space_top"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/padding_small"
        app:layout_constraintBottom_toTopOf="@id/label_switch"
        app:layout_constraintStart_toStartOf="@id/container"/>

</androidx.constraintlayout.widget.ConstraintLayout>
