<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="600dp"
        android:layout_gravity="center"
        android:background="@color/bg_gray"
        android:padding="@dimen/padding_small">

        <FrameLayout
            android:id="@+id/preview_video"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            app:layout_constraintWidth_percent="0.55"
            app:layout_constraintDimensionRatio="16:9"
            android:layout_marginVertical="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/padding_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/group_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/preview_video"
            app:layout_constraintTop_toTopOf="@id/preview_video"
            app:layout_constraintBottom_toBottomOf="@id/preview_video">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rd_vga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_video_vga"
                android:textColor="@android:color/black"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rd_hd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_video_hd"
                android:textColor="@android:color/black"
                android:layout_marginVertical="5dp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rd_fhd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_video_fhd"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginBottom="@dimen/padding_small"
            style="@style/normal_button"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:text="@string/btn_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preview_video"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>