<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normal_button"
        android:text="@string/btn_ok"
        android:layout_marginTop="@dimen/padding_normal"
        android:layout_marginEnd="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normal_button"
        android:text="@string/btn_cancel"
        android:layout_marginEnd="@dimen/padding_small"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintTop_toTopOf="@id/btn_ok"
        app:layout_constraintBottom_toBottomOf="@id/btn_ok">
        <requestFocus/>
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_delete_all_short"
        android:textSize="@dimen/font_size_normal"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/padding_small"
        android:textColor="?attr/text_color_light"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_data"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message"
        android:layout_marginTop="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>